complete code review changes and handle individual word score

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,9 @@
   <p class="msg">
     <!-- our JS will put messages here dynamically -->
   </p>
+  <p class="score">
+    <!-- our JS will put score here dynamically -->
+  </p>
 
   <ul id="words">
     <!-- our JS will words here as they score -->
